syntax = "proto3";
package homemanager;

import public "room_models.proto";
import public "users_models.proto";

option go_package = "home-manager/homemanager";

message Empty {}

service RoomService {
	rpc Create (CreateRoomRequest) returns (CreateRoomResponse);
	rpc Get (GetRoomRequest) returns (GetRoomResponse);
	rpc GetAll (Empty) returns (GetAllRoomsResponse);
}

service UsersService {
	rpc Create (CreateUserRequest) returns (CreateUserResponse);
	rpc Get (GetUserRequest) returns (GetUserResponse);
	rpc GetAll (Empty) returns (GetAllUsersResponse);
}
