syntax = "proto3";
package homemanager;

option go_package = "home-manager/homemanager";

message CreateRoomRequest {
	string name = 1;
}

message CreateRoomResponse {
	int32 id = 1;
	string name = 2;
}